--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: by-the-app-api-demo-deployment
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: by-the-app-api-demo
@@ -16,12 +16,9 @@ spec:
       - name: by-the-app-api-demo
         image: #{repository-image}#
         resources:
-          requests:
+          limits:
             memory: "64Mi"
             cpu: "50m"
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
         ports:
         - containerPort: 8080
       imagePullSecrets:
@@ -36,9 +33,8 @@ spec:
   selector:
     app: by-the-app-api-demo
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+  - port: 80
+    targetPort: 80
 
 
 ---
@@ -57,7 +53,7 @@ spec:
   tls:
   - hosts:-
     - api-demo.bytheapp.com
-    secretName: bytheappdemo-tls-secret
+    secretName: bytheappdemo-secret-tls
   rules:
     - host: #{host-url}#
       http:
