--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -38,33 +38,33 @@ spec:
 
 
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: by-the-app-api-demo-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
-  name: by-the-app-api-demo-ingress
-  namespace: #{env-namespace}#
-spec:
-  tls:
-  - hosts:-
-    - api-demo.bytheapp.com
-    secretName: bytheappdemo-secret-tls
-  rules:
-    - host: #{host-url}#
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: by-the-app-api-demo-service
-                port:
-                  number: 80
+  apiVersion: networking.k8s.io/v1
+  kind: Ingress
+  metadata:
+    name: by-the-app-api-demo-ingress
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
+    name: by-the-app-api-demo-ingress
+    namespace: #{env-namespace}#
+  spec:
+    tls:
+    - hosts:
+      - api-demo.bytheapp.com
+      secretName: bytheappdemo-secret-tls
+    rules:
+      - host: #{host-url}#
+        http:
+          paths:
+            - path: /
+              pathType: Prefix
+              backend:
+                service:
+                  name: by-the-app-api-demo-service
+                  port:
+                    number: 80
 
 
 
