--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ Flask-Caching
 azure-storage-blob
 azure-keyvault-secrets 
 azure-identity
-google-cloud-speech
+google-cloud-texttospeech
 google-cloud-storage
