--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-flask>=2.0
+flask==2.0.3
 requests==2.26.0
 twilio
 Werkzeug>=2.0
 gunicorn>=20.0
 openai
-Flask-Caching
+Flask-Caching==1.10.1
 azure-storage-blob
 azure-keyvault-secrets 
 azure-identity
