--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-flask==2.0.3
-requests==2.26.0
+flask>=2.0.3
+requests>=2.26.0
 twilio
 Werkzeug>=2.0
 gunicorn>=20.0
 openai
-Flask-Caching==1.10.1
+Flask-Caching>=1.10.1
 azure-storage-blob
 azure-keyvault-secrets 
 azure-identity
 google-cloud-texttospeech
 google-cloud-storage
-Flask-SQLAlchemy==2.5.1
+Flask-SQLAlchemy>=2.5.1
 pyodbc>=4.0.30
