--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ google-cloud-texttospeech
 google-cloud-storage
 Flask-SQLAlchemy>=2.5.1
 pyodbc>=4.0.30
+pandas>=1.3.3
+tensorflow>=2.3.0
+ctransformers>=0.1.0
