--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ gunicorn>=20.0
 openai
 Flask-Caching>=1.10.1
 azure-storage-blob
+azure-data-tables
 azure-keyvault-secrets 
 azure-identity
 google-cloud-texttospeech
