--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,19 @@ uvicorn  # ASGI server to run FastAPI apps
 # Caching
 fastapi-cache2
 
+# fastapi mail
+fastapi-mail
+
+
 # HTTP requests
 requests>=2.26.0  
 
 # Twilio for voice functionality
 twilio  
+
+# sendgrid for email
+sendgrid-python
+
 
 # OpenAI for AI responses
 openai  
@@ -30,6 +38,7 @@ pandas>=1.3.3  # If you're using Pandas for data processing
 
 # Security
 bcrypt
+passlib[bcrypt]  # Alternative hashing (optional)
 pydantic  # Data validation
 email-validator  # Required for Pydantic email validation
 
@@ -40,5 +49,6 @@ ctransformers>=0.1.0
 asgiref  
 
 python-multipart
-PyJWT
+PyJWT[crypto]  # Ensure JWT includes cryptographic support
+python-dotenv  # (Optional) Environment variable management
 
