--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -78,8 +78,11 @@ spec:
     annotations:
       kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
-      nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
-      nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+      nginx.ingress.kubernetes.io/upgrade: "websocket"
+      nginx.ingress.kubernetes.io/connection: "upgrade"
+
     name: by-the-app-api-demo-ingress
     namespace: #{env-namespace}#
   spec:
