--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -78,10 +78,19 @@ spec:
     annotations:
       kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
-      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
       nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
       nginx.ingress.kubernetes.io/upgrade: "websocket"
       nginx.ingress.kubernetes.io/connection: "upgrade"
+      nginx.ingress.kubernetes.io/upstream-hash-by: '$remote_addr' 
+
+      # Session affinity for WebSocket
+      nginx.ingress.kubernetes.io/affinity: 'cookie'
+      nginx.ingress.kubernetes.io/affinity-mode: 'persistent'
+      nginx.ingress.kubernetes.io/session-cookie-name: 'ws-server'
+      nginx.ingress.kubernetes.io/session-cookie-expires: '86400'
+      nginx.ingress.kubernetes.io/session-cookie-max-age: '86400'
+      nginx.ingress.kubernetes.io/session-cookie-path: '/'  
 
     name: by-the-app-api-demo-ingress
     namespace: #{env-namespace}#
