--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -76,6 +76,7 @@ spec:
   metadata:
     name: by-the-app-api-demo-ingress
     annotations:
+      kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/upgrade: "websocket"
       nginx.ingress.kubernetes.io/connection: "upgrade"
       nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
