--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ pandas>=1.3.3  # If you're using Pandas for data processing
 
 # Security
 bcrypt
+passlib[bcrypt]  # Password hashing
+python-jose[cryptography]  # JWT token handling
 pydantic  # Data validation
 email-validator  # Required for Pydantic email validation
 
