--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: by-the-app-api-demo-deployment
+  namespace: by-the-app-prod
 spec:
   replicas: 3
   selector:
@@ -71,12 +72,17 @@ spec:
           mountPath: /app/certs
       imagePullSecrets:
         - name: #{acr-secret-name}#
+      volumes:
+      - name: kafka-certs
+        secret:
+          secretName: kafka-certs
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: by-the-app-api-demo-service
+  namespace: by-the-app-prod
 spec:
   selector:
     app: by-the-app-api-demo
@@ -86,38 +92,36 @@ spec:
 
 
 ---
-  apiVersion: networking.k8s.io/v1
-  kind: Ingress
-  metadata:
-    name: by-the-app-api-demo-ingress
-    annotations:
-      kubernetes.io/ingress.class: nginx
-      nginx.ingress.kubernetes.io/upgrade: "websocket"
-      nginx.ingress.kubernetes.io/connection: "upgrade"
-      nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
-      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-      nginx.org/websocket-services: by-the-app-api-demo-service
-
-    name: by-the-app-api-demo-ingress
-    namespace: #{env-namespace}#
-  spec:
-    ingressClassName: nginx   # <-- use official ingress class
-    tls:
-    - hosts:
-      - api-demo.bytheapp.com
-      secretName: bytheappdemo-ingress-tls
-    rules:
-      - host: #{host-url}#
-        http:
-          paths:
-            - path: /
-              pathType: Prefix
-              backend:
-                service:
-                  name: by-the-app-api-demo-service
-                  port:
-                    number: 80
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: by-the-app-api-demo-ingress
+  namespace: by-the-app-prod
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/upgrade: "websocket"
+    nginx.ingress.kubernetes.io/connection: "upgrade"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.org/websocket-services: by-the-app-api-demo-service
+spec:
+  ingressClassName: nginx   # <-- use official ingress class
+  tls:
+  - hosts:
+    - api-demo.bytheapp.com
+    secretName: bytheappdemo-ingress-tls
+  rules:
+    - host: #{host-url}#
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: by-the-app-api-demo-service
+                port:
+                  number: 80
 
 
 
